--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,13 +36,6 @@
 		},
 		"ghcr.io/devcontainers-extra/features/protoc:1": {}
 	},
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "go version",
-
 	// Configure tool-specific properties.
 	"customizations": {
 		// Configure properties specific to VS Code.
@@ -53,7 +46,6 @@
 				"go.toolsManagement.checkForUpdates": "local",
 				"go.useLanguageServer": true
 			},
-			
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"golang.Go",
@@ -69,7 +61,12 @@
 				"google.geminicodeassist"
 			]
 		}
-	}
+	},
+	// Use 'postCreateCommand' to run commands after the container is created.
+	"postCreateCommand": "npm install -g @google/gemini-cli"
+
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
